--- a/index.html
+++ b/index.html
@@ -6,18 +6,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Diamon converter</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
+    <style>
+      body {
+        background: url("webb.png");
+      }
+      .wrap {
+        height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+    </style>
   </head>
   <body>
-    <div class="container">
-      <h1>Diamon Converter</h1>
-      <div class="row">
-        <div class="col">
-          <label for="coin">Diamon</label>
-          <input type="string" class="form-control" placeholder="0" id="coin" onchange="diamon(this.value)" />
-        </div>
-        <div class="col">
-          <label for="rupiah">Rupiah</label>
-          <input type="string" class="form-control" placeholder="xxx xxx" id="rupiah" disabled />
+    <div class="container wrap">
+      <div class="col">
+        <h1>Diamon Converter</h1>
+        <div class="row">
+          <div class="col">
+            <label for="coin">Diamon</label>
+            <input type="string" class="form-control" placeholder="0" id="coin" onchange="diamon(this.value)" />
+          </div>
+          <div class="col">
+            <label for="rupiah">Rupiah</label>
+            <input type="string" class="form-control" placeholder="xxx xxx" id="rupiah" disabled />
+          </div>
         </div>
       </div>
     </div>
